# shoto

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CLAUDE.md  SPEC.md  cabal.project  cabal.project.cuda  diff.txt  flake.nix  format.sh  fourmolu.yaml  hlint-refactor.sh  lefthook.yml  package.yaml  plan.md  shoto.cabal  simple-test.hs
.agents/skills/write-shoto-commit-message/: SKILL.md
.agents/skills/write-shoto-commit-message/agents/: openai.yaml
.agents/skills/write-shoto-commit-message/references/: commit-style.md
docs/: AGENT_COMMON.md  OBJECTIVE.md  TECH_STACK.md  TinyIR.md  gemm_lowing.md  gemm_lowing_argo.md
docs/superpowers/plans/: 2026-03-20-nvidia-required-runtime.md  2026-03-21-polyhedral-error.md
docs/superpowers/specs/: 2026-03-20-nvidia-required-runtime-design.md  2026-03-21-polyhedral-error-design.md
isl/: CLAUDE.md  LICENSE  package.yaml
isl/src/: ISL.hs
isl/src/ISL/: AST.hs  Ast.hs  Core.hs  FFI.hs  Flow.hs  Map.hs  Schedule.hs  ScheduleConstraints.hs  ScheduleNode.hs  Set.hs
isl/src/ISL/Ast/: Read.hs  Show.hs  Types.hs
isl/src/ISL/Internal/: FFI.hs
isl/src/ISL/Internal/Ast/: Ops.hs  Types.hs
isl/src/ISL/Internal/Flow/: Ops.hs  Types.hs
isl/src/ISL/Internal/Map/: Ops.hs  Types.hs
isl/src/ISL/Internal/Schedule/: Ops.hs  Types.hs
isl/src/ISL/Internal/ScheduleConstraints/: Ops.hs  Types.hs
isl/src/ISL/Internal/ScheduleNode/: Ops.hs  Types.hs
isl/src/ISL/Internal/Set/: Ops.hs  Types.hs
isl/test/: ISLSpec.hs
isl/test/ISL/: AstSpec.hs  ContextSpec.hs  FlowSpec.hs  MapSpec.hs  ScheduleConstraintsSpec.hs  ScheduleNodeSpec.hs  ScheduleSpec.hs  ScheduleTreeSpec.hs  SetSpec.hs  UnionSetSpec.hs
nvidia-cuda/: package.yaml
nvidia-cuda/src/: CUDA.hs
nvidia-cuda/src/CUDA/: Core.hs  Device.hs  Memory.hs  Module.hs  NVRTC.hs
nvidia-cuda/src/CUDA/Internal/Driver/: FFI.hs
nvidia-cuda/src/CUDA/Internal/NVRTC/: FFI.hs
nvidia-cuda/test/: CUDASpec.hs
playground/: main.py  pyproject.toml  reductions_playbook.py  test_schedule.py
playground/nvrtc/: Makefile  NvrtcMinimalSimple.hs  NvrtcSample.hs  README.md  nvrtc_minimal.cpp  nvrtc_sample.cpp
shoto/: package.yaml  shoto.cabal
shoto-backend/: shoto-backend.cabal
shoto-backend/src/Shoto/: Backend.hs
shoto-codegen/: shoto-codegen.cabal
shoto-codegen/src/Shoto/: Codegen.hs
shoto-exe/: shoto-exe.cabal
shoto-exe/src/: Main.hs
shoto-frontend/: shoto-frontend.cabal
shoto-frontend/src/Shoto/: Frontend.hs
shoto-middleend/: shoto-middleend.cabal
shoto-middleend/src/Shoto/: Middleend.hs
shoto/src/: Codegen.hs  FrontendIR.hs  Polyhedral.hs  Runtime.hs  Shoto.hs
shoto/src/Codegen/: GenIR.hs
shoto/src/Codegen/C/: Ast.hs
shoto/src/Codegen/CUDA/: Ast.hs  Emit.hs
shoto/src/FrontendIR/: Lowering.hs  Types.hs
shoto/src/FrontendIR/Lowering/: Checked.hs  Checker.hs  Parse.hs  RawBuilder.hs
shoto/src/Polyhedral/: AnalyzeDependence.hs  Empty.hs  Internal.hs  Optimize.hs  Parse.hs  Schedule.hs  Types.hs  Unite.hs
shoto/src/Polyhedral/Internal/: Ast.hs  Flow.hs  ScheduleNode.hs
shoto/src/Polyhedral/Internal/Flow/: Types.hs
shoto/src/Polyhedral/Internal/Map/: Ops.hs  Types.hs
shoto/src/Polyhedral/Internal/Schedule/: Types.hs
shoto/src/Polyhedral/Internal/ScheduleConstraints/: Ops.hs  Types.hs
shoto/src/Polyhedral/Internal/Set/: Ops.hs
shoto/src/Runtime/: CPU.hs  NVIDIA.hs  Types.hs
shoto/src/Runtime/CPU/: ABI.hs  Execute.hs  JIT.hs
shoto/src/Runtime/NVIDIA/: Internal.hs  Types.hs
shoto/src/Runtime/NVIDIA/Internal/: Core.hs  Memory.hs
shoto/src/Runtime/NVIDIA/Internal/Driver/: FFI.hs
shoto/src/Runtime/NVIDIA/Internal/NVRTC/: FFI.hs
shoto/test/: AddSpec.hs  CodegenSpec.hs  FrontendIRSpec.hs  PolyhedralSpec.hs  ShotoSpec.hs
shoto/test/Polyhedral/: OptimizeSpec.hs
shoto/test/Polyhedral/Internal/: MapSpec.hs  ScheduleConstraintsSpec.hs
shoto/test/Runtime/: CPUSpec.hs  NVIDIASpec.hs
src/: Builder.hs  Codegen.hs  CoreOps.hs  Executor.hs  FrontendIR.hs  Graph.hs  IR.hs  InputIR.hs  Nvrtc.hs  NvrtcWrapper.hs  Polyhedral.hs  RegionBufferSSA.hs  Runtime.hs  Shoto.hs  Tensor.hs  TinyIR.hs
src/Builder/: CPU.hs  NVIDIA.hs  Types.hs
src/Builder/CPU/: Types.hs
src/Builder/NVIDIA/: Types.hs
src/Builder/NVIDIA/Internal/: Device.hs  NVPTX.hs
src/Builder/NVIDIA/Internal/NVRTC/: FFI.hs
src/Codegen/: GenIR.hs
src/Codegen/C/: Ast.hs  Emit.hs
src/Codegen/CUDA/: Ast.hs  Emit.hs
src/FrontendIR/: Lowering.hs  Types.hs
src/FrontendIR/Lowering/: PolyhedralIR.hs  RawBuilder.hs
src/IR/: Name.hs  Tensor.hs
src/Internal/: FFI.hs
src/Polyhedral/: AnalyzeDependence.hs  Error.hs  Internal.hs  Optimize.hs  Parse.hs  Schedule.hs  Types.hs  Unite.hs
src/Polyhedral/Internal/: Core.hs  FFI.hs  Map.hs  Schedule.hs  ScheduleConstraints.hs  Set.hs
src/Polyhedral/Internal/Ast/: Ops.hs  Types.hs
src/Polyhedral/Internal/Flow/: Ops.hs
src/Polyhedral/Internal/Schedule/: Ops.hs
src/Polyhedral/Internal/ScheduleNode/: Ops.hs  Types.hs
src/Polyhedral/Internal/Set/: Types.hs
src/Runtime/: CPU.hs  NVIDIA.hs  Types.hs
src/Runtime/CPU/: ABI.hs  Execute.hs
src/Runtime/NVIDIA/: Internal.hs  Types.hs
src/Runtime/NVIDIA/Internal/: Core.hs  Device.hs  Memory.hs  Module.hs  NVRTC.hs
test/: AddSpec.hs  ArithmeticSpec.hs  CodegenSpec.hs  E2ESpec.hs  ExePython.hs  ExecutorSpec.hs  FrontendIRSpec.hs  Main.hs  NvrtcSpec.hs  ShotoSpec.hs  TinyIRSpec.hs
test/Codegen/: CSpec.hs  CUDASpec.hs  GenIRSpec.hs
test/Polyhedral/: OptimizeSpec.hs
test/Polyhedral/Internal/: AstSpec.hs  ContextSpec.hs  FlowSpec.hs  ScheduleNodeSpec.hs  ScheduleSpec.hs  SetSpec.hs  UnionSetSpec.hs
test/Runtime/: CPUSpec.hs  NVIDIASpec.hs
test/Runtime/NVIDIA/Internal/: CUDASpec.hs
