cabal-version: 3.14
name:          shoto
version:       0.0.0.1
license:       MIT
license-file:  LICENSE
maintainer:    mushin.hudoushin@gmail.com
author:        Hikaru KONDO
synopsis:      Shoto polyhedral compiler executable
category:      Compilers
build-type:    Simple

library
    exposed-modules:
        FrontendIR
        IR
        RegionBufferSSA
        Runtime
        Shoto
        TinyIR
        CoreOps

    other-modules:
        Internal.FFI

    hs-source-dirs:   src
    default-language: GHC2024
    extra-libraries:  cudart
                    , cuda
                    , nvrtc
                    , stdc++
    extra-lib-dirs:   /usr/local/cuda/lib64
    ghc-options:      -Wall
    build-depends:
        base >=4.19.1.0,
        bytestring,
        process,
        unix,
        containers,
        mtl

test-suite shoto-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:      ArithmeticSpec
                        TinyIRSpec
    default-language:   GHC2024
    extra-libraries:    cudart
                      , cuda
                      , nvrtc
                      , stdc++
    extra-lib-dirs:     /usr/local/cuda/lib64
    ghc-options:        -Wall
    build-depends:
        base,
        hspec,
        process,
        shoto,
        bytestring,
        containers
