cabal-version:      3.14
name:               shoto-backend
version:            0.0.0.1
synopsis:           Polyhedral IR and ISL integration for Shoto
license:            MIT
license-file:       ../LICENSE
author:             Hikaru KONDO
maintainer:         mushin.hudoushin@gmail.com
category:           Compilers
build-type:         Simple

library
    exposed-modules: Shoto.Backend
    build-depends:   
        base >=4.19.1.0,
        shoto-middleend
    hs-source-dirs:  src
    default-language: GHC2024
    ghc-options:     -Wall