cabal-version:      3.14
name:               shoto-exe
version:            0.0.0.1
synopsis:           Shoto polyhedral compiler executable
license:            MIT
license-file:       ../LICENSE
author:             Hikaru KONDO
maintainer:         mushin.hudoushin@gmail.com
category:           Compilers
build-type:         Simple

common warnings
    ghc-options: -Wall

executable shoto
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base >=4.19.1.0,
        shoto-frontend,
        shoto-middleend,
        shoto-backend,
        shoto-codegen
    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N