cabal-version:      3.14
name:               shoto-frontend
version:            0.0.0.1
synopsis:           ONNX to Frontend IR converter for Shoto
license:            MIT
license-file:       ../LICENSE
author:             Hikaru KONDO
maintainer:         mushin.hudoushin@gmail.com
category:           Compilers
build-type:         Simple

library
    exposed-modules: Shoto.Frontend
    build-depends:   base >=4.19.1.0
    hs-source-dirs:  src
    default-language: GHC2024
    ghc-options:     -Wall