cabal-version: 3.14
name:          shoto
version:       0.0.0.1
license:       MIT
license-file:  ../LICENSE
maintainer:    mushin.hudoushin@gmail.com
author:        Hikaru KONDO
synopsis:      Shoto polyhedral compiler executable
category:      Compilers
build-type:    Simple

library
    exposed-modules:  Shoto
    hs-source-dirs:   src
    default-language: GHC2024
    ghc-options:      -Wall
    build-depends:
        base >=4.19.1.0,
        process,
        shoto-backend,
        shoto-codegen,
        shoto-frontend,
        shoto-middleend

test-suite shoto-test
    type:               exitcode-stdio-1.0
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover
    hs-source-dirs:     test
    other-modules:      AddSpec
    default-language:   GHC2024
    ghc-options:        -Wall
    build-depends:
        base,
        hspec,
        process,
        shoto
